syncdoc/tests/roundtrip/snapshots/input/roundtrip__helpers__docs_input_extract_sections.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Extract sections from a document using tree-sitter.

Parses the file with the given format and extracts all sections,
building parent/child relationships based on heading levels.

# Errors

Returns an error if file reading or parsing fails.
